--- a/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/panels/collapsible-panel/collapsible-panel.mod.css
@@ -9,9 +9,8 @@
   --size-icon-container-small: 16px;
 }
 
-.container {
+.base-container {
   box-shadow: var(--shadow-1-second);
-  background-color: var(--color-gray-95);
   border-radius: var(--border-radius-6);
   position: relative;
   min-width: 550px;
@@ -62,7 +61,6 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: var(--color-gray-95);
   border-top-right-radius: var(--border-radius-6);
   border-top-left-radius: var(--border-radius-6);
 }
@@ -75,8 +73,8 @@
   }
 }
 
-.container-open .header-container {
-  border-bottom: 1px var(--color-gray) solid;
+.container-open .base-header-container {
+  border-bottom: 1px var(--color-primaryGrey) solid;
 }
 
 .header {
@@ -84,7 +82,6 @@
   flex: 1;
   align-items: center;
   list-style-type: none;
-  border-bottom: 1px var(--color-gray-95) solid;
   justify-content: space-between;
 
   /*
