fix(colors): convert old colors to new ones in latest components + design tokens

--- a/materials/tokens/backgrounds.mod.css
+++ b/materials/tokens/backgrounds.mod.css
@@ -22,5 +22,5 @@
 
   /* Colors */
   --token-background-color-input-pristine: var(--color-white);
-  --token-background-color-input-disabled: var(--color-whiteCatskill);
+  --token-background-color-input-disabled: var(--color-navy-98);
 }
