--- a/materials/tokens/borders.mod.css
+++ b/materials/tokens/borders.mod.css
@@ -23,10 +23,10 @@
    ========================================================================== */
 
   /* Colors */
-  --token-border-color-input-pristine: var(--color-greySolid);
-  --token-border-color-input-focus: var(--color-buttonHover);
-  --token-border-color-input-disabled: var(--color-whitePorcelain);
-  --token-border-color-input-readonly: var(--color-primaryGrey);
+  --token-border-color-input-pristine: var(--color-gray-60);
+  --token-border-color-input-focus: var(--color-green);
+  --token-border-color-input-disabled: var(--color-gray);
+  --token-border-color-input-readonly: var(--color-gray);
   --token-border-color-input-error: var(--color-red);
   --token-border-color-input-warning: var(--color-orange);
 
