refactor(colors): changes dropdown and tables

--- a/date-picker/date-picker-ct-theme.mod.css
+++ b/date-picker/date-picker-ct-theme.mod.css
@@ -23,7 +23,7 @@
 }
 
 :global(.flatpickr-day:hover) {
-  background-color: var(--color-blue-95);
+  background-color: var(--color-gray-90);
 }
 
 :global(.flatpickr-prev-month:hover),
