--- a/materials/tokens/fonts.mod.css
+++ b/materials/tokens/fonts.mod.css
@@ -28,6 +28,7 @@
   --token-font-color-error: var(--color-red);
   --token-font-color-warning: var(--color-orange);
   --token-font-color-readonly: var(--color-gray-60);
+  --token-font-color-placeholder: var(--color-gray-60);
 
   /* ==========================================================================
    Sizes
