--- a/inputs/money-input/money-input.mod.css
+++ b/inputs/money-input/money-input.mod.css
@@ -1,3 +1,4 @@
+@import '../../materials/tokens/tokens.mod.css';
 @import '../../materials/borders.mod.css';
 @import '../../materials/colors.mod.css';
 @import '../../materials/sizes.mod.css';
@@ -33,6 +34,10 @@
   font-weight: 500;
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif;
+}
+
+.input::placeholder {
+  color: var(--token-font-color-placeholder);
 }
 
 /* Tones */
