--- a/switches/checkbox/checkbox.mod.css
+++ b/switches/checkbox/checkbox.mod.css
@@ -13,10 +13,46 @@
   cursor: not-allowed;
 }
 
+/* Text  */
+
+/* isDisabled */
+
 .textWrapperDisabled {
   color: var(--color-primaryGrey);
 }
 
+/* hasError */
+
 .textWrapperError {
   color: var(--color-red);
+}
+
+/* Checkbox */
+
+/* isDisabled */
+
+.isDisabled svg g[id='borderAndContent'] > :not([id='border']) {
+  fill: var(--color-primaryGrey);
+}
+
+.isDisabled svg [id='borderAndContent'] > [id='border'] {
+  stroke: var(--color-primaryGrey);
+}
+
+/* hasError */
+
+.hasError svg g[id='borderAndContent'] > :not([id='border']) {
+  fill: var(--color-red);
+}
+
+.hasError svg [id='borderAndContent'] > [id='border'] {
+  stroke: var(--color-red);
+}
+
+/* Hover */
+
+.labelWrapper:not(.labelWrapperDisabled, .labelWrapperError):hover
+  svg
+  [id='borderAndContent'] > [id='border'] {
+  stroke: var(--color-primaryGreen);
 }
