--- a/materials/colors.mod.css
+++ b/materials/colors.mod.css
@@ -1,33 +1,40 @@
-/* Note: This file is transformed to JSON version in order to list the colors in
-the UIKit. It is thus essential that no all colors are listed under the `:root`
-selector. Color groups are indicated by a comment preceeding the group of
-colors. */
+/* stylelint-disable */
+
+/* Note: Do not modify this file. This is an automatic generated file from `merchant-center-frontend/mc-scripts/token/generate-color-variables` which creates our colors based on a JSON file.Also, This file is transformed to JSON version in order to list the colors inthe UIKit. It is thus essential that no all colors are listed under the `:root`selector. Color groups are indicated by a comment preceeding the group of colors. */
 
 :root {
-  /* new colors */
-
-  --color-green: #00b39e;
-  --color-green-25: color-mod(var(--color-green) lightness(25%));
-  --color-green-40: color-mod(var(--color-green) lightness(40%));
-  --color-green-85: color-mod(var(--color-green) lightness(85%));
-  --color-green-95: color-mod(var(--color-green) lightness(95%));
-  --color-white: #fff;
-  --color-navy: #213c45;
-  --color-navy-30: color-mod(var(--color-navy) lightness(30%));
-  --color-navy-40: color-mod(var(--color-navy) lightness(40%));
-  --color-navy-95: color-mod(var(--color-navy) lightness(95%));
-  --color-navy-98: color-mod(var(--color-navy) lightness(98%));
-  --color-blue: #078cdf;
-  --color-blue-85: color-mod(var(--color-blue) lightness(85%));
-  --color-blue-95: color-mod(var(--color-blue) lightness(95%));
-  --color-gray: #ccc;
-  --color-gray-60: color-mod(var(--color-gray) lightness(60%));
-  --color-gray-90: color-mod(var(--color-gray) lightness(90%));
-  --color-gray-95: color-mod(var(--color-gray) lightness(95%));
-  --color-orange: #f16d0e;
-  --color-orange-95: color-mod(var(--color-orange) lightness(95%));
-  --color-red: #e60050;
-  --color-red-95: color-mod(var(--color-red) lightness(95%));
-  --color-purple: #b866ff;
+  /* Colors */
+  /* Blacks */
   --color-black: #1a1a1a;
+  /* Purples */
+  --color-purple: #b866ff;
+  /* Reds */
+  --color-red: #e60050;
+  --color-red-95: color(var(--color-red) lightness(95%));
+  /* Oranges */
+  --color-orange: #f16d0e;
+  --color-orange-95: color(var(--color-orange) lightness(95%));
+  /* Grays */
+  --color-gray: #ccc;
+  --color-gray-95: color(var(--color-gray) lightness(95%));
+  --color-gray-90: color(var(--color-gray) lightness(90%));
+  --color-gray-60: color(var(--color-gray) lightness(60%));
+  /* Blues */
+  --color-blue: #078cdf;
+  --color-blue-95: color(var(--color-blue) lightness(95%));
+  --color-blue-85: color(var(--color-blue) lightness(85%));
+  /* Navys */
+  --color-navy: #213c45;
+  --color-navy-98: color(var(--color-navy) lightness(98%));
+  --color-navy-95: color(var(--color-navy) lightness(95%));
+  --color-navy-40: color(var(--color-navy) lightness(40%));
+  --color-navy-30: color(var(--color-navy) lightness(30%));
+  /* Whites */
+  --color-white: #fff;
+  /* Greens */
+  --color-green: #00b39e;
+  --color-green-95: color(var(--color-green) lightness(95%));
+  --color-green-85: color(var(--color-green) lightness(85%));
+  --color-green-40: color(var(--color-green) lightness(40%));
+  --color-green-25: color(var(--color-green) lightness(25%));
 }
