--- a/dropdowns/primary-action-dropdown/primary-actions-dropdown.mod.css
+++ b/dropdowns/primary-action-dropdown/primary-actions-dropdown.mod.css
@@ -1,5 +1,5 @@
 @import '../../materials/borders.mod.css';
-@import '../../materials/colors.mod.css';
+@import '../../materials/colors/base-colors.mod.css';
 @import '../../materials/shadows.mod.css';
 @import '../../materials/sizes.mod.css';
 @import '../../materials/spacings.mod.css';
