--- a/inputs/money-input/money-input.mod.css
+++ b/inputs/money-input/money-input.mod.css
@@ -1,6 +1,6 @@
 @import '../../materials/tokens/tokens.mod.css';
 @import '../../materials/borders.mod.css';
-@import '../../materials/colors.mod.css';
+@import '../../materials/colors/base-colors.mod.css';
 @import '../../materials/sizes.mod.css';
 @import '../../materials/spacings.mod.css';
 @import '../../materials/transitions.mod.css';
