--- a/date-picker/date-picker-body.mod.css
+++ b/date-picker/date-picker-body.mod.css
@@ -1,5 +1,5 @@
 @import '../materials/borders.mod.css';
-@import '../materials/colors.mod.css';
+@import '../materials/colors/base-colors.mod.css';
 @import '../materials/spacings.mod.css';
 @import '../materials/transitions.mod.css';
 @import '../materials/sizes.mod.css';
