--- a/loading-spinner/loading-spinner.mod.css
+++ b/loading-spinner/loading-spinner.mod.css
@@ -1,4 +1,4 @@
-@import '../materials/colors.mod.css';
+@import '../materials/colors/base-colors.mod.css';
 @import '../materials/spacings.mod.css';
 
 :root {
