--- a/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/panels/collapsible-panel/collapsible-panel.mod.css
@@ -1,4 +1,4 @@
-@import '../../materials/colors.mod.css';
+@import '../../materials/colors/base-colors.mod.css';
 @import '../../materials/shadows.mod.css';
 @import '../../materials/spacings.mod.css';
 @import '../../materials/borders.mod.css';
