--- a/switches/toggle/toggle-button.mod.css
+++ b/switches/toggle/toggle-button.mod.css
@@ -1,4 +1,4 @@
-@import '../../materials/colors.mod.css';
+@import '../../materials/colors/base-colors.mod.css';
 @import '../../materials/sizes.mod.css';
 @import '../../materials/transitions.mod.css';
 @import '../../materials/shadows.mod.css';
