--- a/table/base-table/base-table.mod.css
+++ b/table/base-table/base-table.mod.css
@@ -1,4 +1,4 @@
-@import '../../materials/colors.mod.css';
+@import '../../materials/colors/base-colors.mod.css';
 @import '../../materials/transitions.mod.css';
 
 :root {
