--- a/inputs/localized-text-input/localized-text-input.mod.css
+++ b/inputs/localized-text-input/localized-text-input.mod.css
@@ -6,10 +6,6 @@
 @import '../../materials/transitions.mod.css';
 @import '../../materials/sizes.mod.css';
 
-:root {
-  --height-input: 32px;
-}
-
 /* Base */
 
 .fieldContainer {
@@ -21,24 +17,28 @@
 .languageLabel {
   /* avoid wrapping label onto new lines */
   flex: 1 0 auto;
-  height: var(--height-input);
-  line-height: var(--height-input);
-  background-color: var(--color-gray-95);
-  border-top-left-radius: var(--border-radius-6);
-  border-bottom-left-radius: var(--border-radius-6);
-  border: var(--border-radius-1) solid var(--color-gray);
-  border-right: 0;
+  color: var(--token-font-color-disabled);
+  height: var(--token-size-height-input);
+  line-height: var(--token-size-height-input);
+  background-color: var(--token-background-color-input-disabled);
+  border-top-left-radius: var(--token-border-radius-input);
+  border-bottom-left-radius: var(--token-border-radius-input);
+  border: 1px var(--token-border-color-input-disabled) solid;
   padding: 0 var(--spacing-8);
   transition: var(--transition-standard);
+  border-right: 0;
   box-shadow: none;
   appearance: none;
 }
 
 .input {
+  color: var(--token-font-color-default);
+  font-family: var(--token-font-family-default);
+  font-size: var(--token-font-size-body);
+  height: var(--token-size-height-input);
+  border-top-right-radius: var(--token-border-radius-input);
+  border-bottom-right-radius: var(--token-border-radius-input);
   width: 100%;
-  height: var(--height-input);
-  border-top-right-radius: var(--border-radius-6);
-  border-bottom-right-radius: var(--border-radius-6);
   border-style: solid;
   border-width: var(--border-radius-1);
   padding: 0 var(--spacing-8);
@@ -46,9 +46,6 @@
   outline: none;
   box-shadow: none;
   appearance: none;
-  font-weight: 500;
-  font-size: 1rem;
-  font-family: 'Open Sans', sans-serif;
 }
 
 .input::placeholder {
@@ -66,39 +63,39 @@
   right: 0;
 }
 
-/* Tones */
+/* States */
 
 .pristine {
   composes: input;
-  border-color: var(--color-gray-60);
-  color: var(--color-black);
+  border-color: var(--token-border-color-input-pristine);
+  background-color: var(--token-background-color-input-pristine);
 }
 
 .warning {
   composes: input;
-  color: var(--color-orange);
-  border-color: var(--color-orange);
+  color: var(--token-font-color-warning);
+  border-color: 1px solid var(--token-border-color-input-warning);
 }
 
 .error {
   composes: input;
-  color: var(--color-red);
-  border-color: var(--color-red);
+  color: var(--token-font-color-error);
+  border-color: var(--token-border-color-input-error);
 }
 
 .disabled {
   composes: input;
   cursor: not-allowed;
-  background-color: var(--color-navy-98);
-  border-color: var(--color-gray);
-  color: var(--color-gray-60);
+  color: var(--token-font-color-disabled);
+  border-color: var(--token-border-color-input-disabled);
+  background-color: var(--token-background-color-input-disabled);
   opacity: 1; /* fix for mobile safari */
 }
 
 .readonly {
   composes: input;
-  color: var(--color-gray-60);
-  border-color: var(--color-gray);
+  border-color: var(--token-border-color-input-readonly);
+  color: var(--token-font-color-readonly);
   cursor: default;
 }
 
@@ -106,6 +103,7 @@
 
 .pristine:active,
 .pristine:focus {
-  border-color: var(--color-green);
-  color: var(--color-black);
+  border-color: var(--token-border-color-input-focus);
+  background: var(--token-background-color-input-focus);
+  color: var(--token-font-color-default);
 }
