--- a/typography/text/text.mod.css
+++ b/typography/text/text.mod.css
@@ -99,6 +99,10 @@ small {
   color: var(--color-white);
 }
 
+.warning {
+  color: var(--color-orange);
+}
+
 .inline {
   display: inline-block;
 }
