--- a/materials/tokens/fonts.mod.css
+++ b/materials/tokens/fonts.mod.css
@@ -34,5 +34,5 @@
    Sizes
    ========================================================================== */
 
-  --token-font-size-body: 13px;
+  --token-font-size-default: 13px;
 }
