--- a/inputs/money-input/money-input.mod.css
+++ b/inputs/money-input/money-input.mod.css
@@ -20,8 +20,8 @@
   flex: 1;
   color: var(--token-font-color-default);
   font-family: var(--token-font-family-default);
-  font-size: var(--token-font-size-body);
-  height: var(--token-size-height-input);
+  font-size: var(--token-font-size-default);
+  height: var(--token-size-input-height);
   border-top-right-radius: var(--token-border-radius-input);
   border-bottom-right-radius: var(--token-border-radius-input);
   border: 1px var(--token-border-color-input-pristine) solid;
@@ -79,7 +79,7 @@
   flex-direction: column;
   border-top-left-radius: var(--token-border-radius-input);
   border-bottom-left-radius: var(--token-border-radius-input);
-  height: var(--token-size-height-input);
+  height: var(--token-size-input-height);
   border: 1px var(--token-border-color-input-pristine) solid;
   background-color: var(--token-background-color-input-pristine);
   border-right: 0;
