--- a/materials/colors/colors-for-story.mod.css
+++ b/materials/colors/colors-for-story.mod.css
@@ -6,15 +6,19 @@
   This file is used to list the colors in the UIKit Color's story purposes only. */
 
 :root {
+  --color-white: #fff;
   --color-black: #1a1a1a;
   --color-purple: #b866ff;
   --color-red: #e60050;
   --color-orange: #f16d0e;
-  --color-gray: #ccc;
   --color-blue: #078cdf;
+  --color-gray: #ccc;
   --color-navy: #213c45;
-  --color-white: #fff;
   --color-green: #00b39e;
+}
+
+.white {
+  background-color: #fff;
 }
 
 .black {
@@ -30,7 +34,7 @@
 }
 
 .red-95 {
-  background-color: color-mod(var(--color-red) lightness(95%));
+  background-color: color-mod-mod(var(--color-red) lightness(95%));
 }
 
 .orange {
@@ -38,23 +42,7 @@
 }
 
 .orange-95 {
-  background-color: color-mod(var(--color-orange) lightness(95%));
-}
-
-.gray {
-  background-color: #ccc;
-}
-
-.gray-95 {
-  background-color: color-mod(var(--color-gray) lightness(95%));
-}
-
-.gray-90 {
-  background-color: color-mod(var(--color-gray) lightness(90%));
-}
-
-.gray-60 {
-  background-color: color-mod(var(--color-gray) lightness(60%));
+  background-color: color-mod-mod(var(--color-orange) lightness(95%));
 }
 
 .blue {
@@ -62,11 +50,27 @@
 }
 
 .blue-95 {
-  background-color: color-mod(var(--color-blue) lightness(95%));
+  background-color: color-mod-mod(var(--color-blue) lightness(95%));
 }
 
 .blue-85 {
-  background-color: color-mod(var(--color-blue) lightness(85%));
+  background-color: color-mod-mod(var(--color-blue) lightness(85%));
+}
+
+.gray {
+  background-color: #ccc;
+}
+
+.gray-95 {
+  background-color: color-mod-mod(var(--color-gray) lightness(95%));
+}
+
+.gray-90 {
+  background-color: color-mod-mod(var(--color-gray) lightness(90%));
+}
+
+.gray-60 {
+  background-color: color-mod-mod(var(--color-gray) lightness(60%));
 }
 
 .navy {
@@ -74,23 +78,19 @@
 }
 
 .navy-98 {
-  background-color: color-mod(var(--color-navy) lightness(98%));
+  background-color: color-mod-mod(var(--color-navy) lightness(98%));
 }
 
 .navy-95 {
-  background-color: color-mod(var(--color-navy) lightness(95%));
+  background-color: color-mod-mod(var(--color-navy) lightness(95%));
 }
 
 .navy-40 {
-  background-color: color-mod(var(--color-navy) lightness(40%));
+  background-color: color-mod-mod(var(--color-navy) lightness(40%));
 }
 
 .navy-30 {
-  background-color: color-mod(var(--color-navy) lightness(30%));
-}
-
-.white {
-  background-color: #fff;
+  background-color: color-mod-mod(var(--color-navy) lightness(30%));
 }
 
 .green {
@@ -98,17 +98,17 @@
 }
 
 .green-95 {
-  background-color: color-mod(var(--color-green) lightness(95%));
+  background-color: color-mod-mod(var(--color-green) lightness(95%));
 }
 
 .green-85 {
-  background-color: color-mod(var(--color-green) lightness(85%));
+  background-color: color-mod-mod(var(--color-green) lightness(85%));
 }
 
 .green-40 {
-  background-color: color-mod(var(--color-green) lightness(40%));
+  background-color: color-mod-mod(var(--color-green) lightness(40%));
 }
 
 .green-25 {
-  background-color: color-mod(var(--color-green) lightness(25%));
+  background-color: color-mod-mod(var(--color-green) lightness(25%));
 }
