--- a/fields/field-label/required-indicator.mod.css
+++ b/fields/field-label/required-indicator.mod.css
@@ -1,5 +1,6 @@
-@import '@commercetools-frontend/ui-kit/materials/colors.mod.css';
+@import '@commercetools-frontend/ui-kit/materials/colors/base-colors.mod.css';
+@import '@commercetools-frontend/ui-kit/materials/tokens/tokens.mod.css';
 
 .highlighted {
-  color: var(--color-orange);
+  color: var(--token-font-color-warning);
 }
