fix(field-label): improves props

--- a/fields/field-label/field-label.mod.css
+++ b/fields/field-label/field-label.mod.css
@@ -22,8 +22,12 @@
 }
 
 .description {
-  float: none;
-  clear: both;
+  width: 100%;
+  display: inline-block;
+}
+
+.hint + .description {
+  margin-top: var(--spacing-4);
 }
 
 .badge {
