styles(tokens): adds tokens for selected/hover

--- a/materials/tokens/backgrounds.mod.css
+++ b/materials/tokens/backgrounds.mod.css
@@ -23,4 +23,6 @@
   /* Colors */
   --token-background-color-input-pristine: var(--color-white);
   --token-background-color-input-disabled: var(--color-navy-98);
+  --token-background-color-input-hover: var(--color-gray-90);
+  --token-background-color-input-selected: var(--color-navy-95);
 }
